<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/lightBackgroungColor"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:titleTextAppearance="@style/Toolbar.TitleText" />


    <RelativeLayout

        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"

            android:background="@color/colorAccent"
            android:fontFamily=""

            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"

            android:text="GET STARTED"
            android:textSize="20dp"
            android:textStyle="bold"
            android:translationZ="10dp"

            />

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp">

            <EditText
                android:id="@+id/fname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
android:maxLength="255"
                android:layout_weight="1"
                android:digits="@string/name_string"

                android:ellipsize="end"
                android:hint="First Name"
                android:inputType="text"


                android:nextFocusForward="@+id/lname"

                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                


                  

                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/lname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                   
                android:digits="@string/name_string"
                android:ellipsize="end"
                android:hint="Last Name"
                android:inputType="text"

                android:maxLength="255"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:textSize="@dimen/text_size" />

        </LinearLayout>


        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight=".5"
                 
            android:digits="@string/email_string"
            android:hint="Username"

            android:inputType="textEmailAddress"
            android:maxLength="255"
            android:minLines="1"

            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"

            
               
            android:textSize="@dimen/text_size" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uname"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
                 
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="255"

            android:minLines="1"

            android:textAppearance="?android:attr/textAppearanceLarge"
            
               
            android:textSize="@dimen/text_size" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
                 
            android:digits="@string/email_string"
            android:hint="Email ID"
            android:inputType="textEmailAddress"
            android:maxLength="255"

            android:minLines="1"

            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            

               
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
                 

            android:inputType="phone"
            android:text="+91  "
            android:textAppearance="?android:attr/textAppearanceLarge"
            
               
            android:textSize="@dimen/text_size"


            />

        <EditText
            android:id="@+id/mobNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"

            android:layout_toRightOf="@id/countryCode"
                 
            android:digits="@string/mob_numbers"
            android:hint="Mobile Number"
            android:inputType="phone"
            android:maxLength="10"
            android:minLines="1"

            android:singleLine="true"

            android:textAppearance="?android:attr/textAppearanceLarge"
            
               
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/male"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_below="@id/mobNo"
            android:layout_marginLeft="5dp"

            android:layout_marginTop="5dp"
            android:hint="Male"

            android:inputType="text"

            android:minLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
               
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobNo"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/male"

            android:hint="Female"

            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceLarge"
               


            android:textSize="@dimen/text_size" />


        <RelativeLayout
            android:id="@+id/selectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/male"
            android:onClick="selectDate">

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                     
                android:drawableRight="@drawable/images"
                android:ems="10"
                android:focusable="false"
                android:hint="Date Of Birth"
                android:inputType="date"

                android:textAppearance="?android:attr/textAppearanceLarge"
                
                   


                android:textSize="@dimen/text_size">

                <requestFocus />
            </EditText>

        </RelativeLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="?attr/colorPrimaryDark"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="        Next       "
            
            android:textSize="@dimen/text_size" />
    </RelativeLayout
        >

    <RelativeLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
>



        <EditText
            android:id="@+id/stname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginRight="5dp"
                 
            android:digits="@string/address"
            android:hint="Street Name"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            
               


            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stname"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
                 
            android:digits="@string/addressText"
            android:hint="City"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"

            android:textAppearance="?android:attr/textAppearanceLarge"
            
               
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city"
            android:layout_marginLeft="5dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_marginRight="5dp"
                
            android:digits="@string/addressText"
            android:hint="State"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            
                 

            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/counpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/state"
            android:layout_marginLeft="5dp"

            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/state"
                android:layout_weight="1"
                     
                android:digits="@string/addressText"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:ellipsize="end"
                android:hint="Country"
                android:inputType="text"
                android:paddingLeft="@dimen/activity_horizontal_margin"


                android:textAppearance="?android:attr/textAppearanceLarge"
                
                   
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country"
                android:layout_weight="0.6"
                     
                android:imeOptions="actionDone"
                android:ellipsize="end"
                android:hint="Pincode"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="@dimen/activity_horizontal_margin"

                android:paddingRight="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"


                
                   
                android:textSize="@dimen/text_size" />
        </LinearLayout>
        <Button
            android:id="@+id/btnShowAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:drawableLeft="@drawable/ic_gps_fixed_black_24dp"

            android:layout_gravity="center"
            android:layout_below="@+id/counpin"

            android:layout_centerHorizontal="true"
            android:text="  Get location via GPS" />


        <RelativeLayout
            android:id="@+id/dptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnShowAddress"
            android:layout_above="@+id/submit"

            android:layout_gravity="center"

            android:layout_centerInParent="true"

            android:visibility="visible">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:layout_centerInParent="true">

            <TextView
                android:id="@+id/dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/dp"
               android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/pic_dimen"
                android:layout_height="@dimen/pic_dimen"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/account_circle" />
            </RelativeLayout>
        </RelativeLayout>


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="?attr/colorPrimaryDark"
            android:text="CREATE ACCOUNT"
             />


    </RelativeLayout>


</RelativeLayout>